--- a/travis.yml
+++ b/travis.yml
@@ -3,7 +3,6 @@ sudo: required
 services:
   - docker
 
-
 before_install:
   - docker build -t appelsappel/react-test -f ./client/Dockerfile.dev ./client
 
@@ -22,4 +21,17 @@ after_success:
 - docker push appelsappel/multi-nginx
 - docker push appelsappel/multi-api
 - docker push appelsappel/multi-worker
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "multi-docker"
+  env: "Docker-env"
+  bucket_name: elasticbeanstalk-us-east-2-331856745095
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
 
